cambio front reserva

--- a/front/src/app/components/dashboard/juegos/juegos-tutoriales/tutorial-banderas-europa/tutorial-banderas-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-tutoriales/tutorial-banderas-europa/tutorial-banderas-europa.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row row-cols-lg-5 row-cols-md-3 row-cols-sm-1">
     <div class="mx-3 my-3 text-center" *ngFor="let countryItem of countryArray">
       <img class="border" [src]="countryItem.bandera" style="width: 100px"/>
