--- a/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
@@ -1,9 +1,6 @@
-<button mat-button>Banderas de Europa</button>
-
-
-<div class="container col-auto text-center">
-  <img class="border" [src]="pregunta" style="width: 100px"/>
-  <form [formGroup]="form" (ngSubmit)="comprobar()">
+<div class="container col-auto text-center mt-5" *ngIf="!fin">
+  <img class="border" [src]="pregunta" style="width: 200px"/>
+  <form [formGroup]="form" (ngSubmit)="comprobar()" class="mt-3">
     <mat-form-field class="ancho" appearance="fill">
       <input type="text" matInput autocomplete="off" formControlName="pais_formulario">
     </mat-form-field>
@@ -11,4 +8,7 @@
   </form>
 </div>
 
-
+<div class="container" *ngIf="fin">
+  <h1>Puntuación</h1>
+  <h2 [innerHTML]="puntuacion"></h2>
+</div>
