--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
         <input type="password" matInput autocomplete="off" name="password" [(ngModel)]="login.password">
       </mat-form-field>
       <button type="submit" mat-raised-button color="primary" class="ancho boton">Login</button>
-      <button type="button" mat-button routerLink="navbar">
+      <button type="button" mat-button routerLink="">
         <mat-icon>arrow_back</mat-icon>
         <span>Volver</span>
       </button>
