--- a/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
@@ -6,6 +6,10 @@
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary" class="ancho boton" style="display: none;">Comprobar</button>
   </form>
+  <button type="button" mat-button onclick="history.back()">
+    <mat-icon>close</mat-icon>
+    <span>Abandonar</span>
+  </button>
 </div>
 
 <div class="container" *ngIf="fin">
