--- a/front/src/app/components/dashboard/juegos/juegos-banderas/juegos-banderas.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-banderas/juegos-banderas.component.html
@@ -1,1 +1,3 @@
-<button mat-button routerLink="juego_banderas_europa">Banderas Europa</button>
+<button class="btn btn-default mt-4" routerLink="juego_banderas_europa">
+  <img src="./assets/img/bandera_europa.png" width="100px" /><br>Banderas Europa
+</button>
