--- a/front/src/app/components/dashboard/juegos/juegos-mapas/juego-mapa-europa/juego-mapa-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-mapas/juego-mapa-europa/juego-mapa-europa.component.html
@@ -2,6 +2,11 @@
   <h1 class="border-bottom border-top" [innerHTML]="pais"></h1>
 
   <div id="chartdiv" style="width: 100%; height: 700px; margin-top: 50px;"></div>
+
+  <button type="button" mat-button onclick="history.back()">
+    <mat-icon>close</mat-icon>
+    <span>Abandonar</span>
+  </button>
 </div>
 
 <div class="container" *ngIf="index == 48">
