--- a/front/src/app/components/dashboard/juegos/juegos-mapas/juegos-mapas.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-mapas/juegos-mapas.component.html
@@ -1,1 +1,3 @@
-<button mat-button routerLink="juego_mapa_europa">Mapa Europa</button>
+<button class="btn btn-default mt-4" routerLink="juego_mapa_europa">
+  <img src="./assets/img/europa_juego_mapa.png" width="100" /><br>Mapa Europa
+</button>
