--- a/front/src/app/components/dashboard/juegos/juegos-quiz/juego-quiz-europa/juego-quiz-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-quiz/juego-quiz-europa/juego-quiz-europa.component.html
@@ -2,3 +2,8 @@
 <div class="mt-5" [innerHTML]="pregunta"></div>
 
 <div [innerHTML]="respuesta" id="este"></div>
+
+<button type="button" mat-button onclick="history.back()">
+  <mat-icon>close</mat-icon>
+  <span>Abandonar</span>
+</button>
