--- a/front/src/app/components/dashboard/juegos/juegos-tutoriales/tutorial-paises-europa/tutorial-paises-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-tutoriales/tutorial-paises-europa/tutorial-paises-europa.component.html
@@ -1,1 +1,7 @@
 <div class="mt-5" id="chartdiv" style="width: 100%; height: 700px; margin-top: 50px;"></div>
+
+
+<button type="button" mat-button onclick="history.back()">
+  <mat-icon>close</mat-icon>
+  <span>Abandonar</span>
+</button>
