--- a/front/src/app/components/dashboard/juegos/juegos-tutoriales/juegos-tutoriales.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-tutoriales/juegos-tutoriales.component.html
@@ -1,3 +1,12 @@
-<button mat-button routerLink="juego_tutorial_mapa_europa">Tutorial Mapa de Europa</button>
-<button mat-button routerLink="juego_tutorial_banderas_europa">Tutorial Banderas de Europa</button>
-<button mat-button routerLink="juego_tutorial_mapa_mundo">Tutorial Mapa del Mundo</button>
+<button class="btn btn-default mt-4 mx-5" routerLink="juego_tutorial_mapa_europa">
+  <img src="./assets/img/tutoriales.png" width="100" />
+  <img src="./assets/img/europa_juego_tutorial.png" width="100" /><br>Tutorial Mapa de Europa
+</button>
+<button class="btn btn-default mt-4 mx-5" routerLink="juego_tutorial_banderas_europa">
+  <img src="./assets/img/tutoriales.png" width="100" />
+  <img src="./assets/img/banderas_tutorial_europa.png" width="100" /><br>Tutorial Banderas de Europa
+</button>
+<button class="btn btn-default mt-4 mx-5" routerLink="juego_tutorial_mapa_mundo">
+  <img src="./assets/img/tutoriales.png" width="100" />
+  <img src="./assets/img/mundo_juego_tutorial.png" width="100" /><br>Tutorial Mapa del Mundo
+</button>
