--- a/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
@@ -6,7 +6,7 @@
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary" class="ancho boton" style="display: none;">Comprobar</button>
   </form>
-  <button type="button" mat-button onclick="history.back()">
+  <button type="button" mat-raised-button color="warn" onclick="history.back()">
     <mat-icon>close</mat-icon>
     <span>Abandonar</span>
   </button>
