--- a/front/src/app/components/dashboard/juegos/juegos-mapas/juego-mapa-europa/juego-mapa-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-mapas/juego-mapa-europa/juego-mapa-europa.component.html
@@ -3,7 +3,7 @@
 
   <div id="chartdiv" style="width: 100%; height: 700px; margin-top: 50px;"></div>
 
-  <button type="button" mat-button onclick="history.back()">
+  <button type="button" mat-raised-button color="warn" onclick="history.back()">
     <mat-icon>close</mat-icon>
     <span>Abandonar</span>
   </button>
