--- a/front/src/app/components/dashboard/juegos/juegos-quiz/juegos-quiz.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-quiz/juegos-quiz.component.html
@@ -1,1 +1,4 @@
-<button mat-button routerLink="juego_quiz_europa">Quiz Europa</button>
+<button class="btn btn-default mt-4" routerLink="juego_quiz_europa">
+  <img src="./assets/img/quiz.png" width="100" />
+  <img src="./assets/img/bandera_europa.png" width="100" /><br>Quiz Europa
+</button>
