mejoras visuales y trabajo en el ranking

--- a/front/src/app/components/dashboard/juegos/juegos.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos.component.html
@@ -1,7 +1,7 @@
 
 <div class="container mt-3">
   <mat-tab-group animationDuration="0ms" dynamicHeight>
-    <mat-tab label="Juegos de Mapas" routerLink="juegos_mapas">
+    <mat-tab label="Juegos de Mapas">
       <ng-template matTabContent>
         <app-juegos-mapas></app-juegos-mapas>
       </ng-template>
