--- a/front/src/app/components/dashboard/dashboard.component.html
+++ b/front/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="container col-auto text-center">
     <img src="./assets/img/logo.png" alt="" width="150px">
   </div>
-  <button mat-icon-button [matMenuTriggerFor]="menu">
+  <button class="position-absolute end-0 mx-3" mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
