--- a/front/src/app/components/dashboard/ranking/ranking.component.html
+++ b/front/src/app/components/dashboard/ranking/ranking.component.html
@@ -2,5 +2,46 @@
   <span>Ranking</span>
 </mat-toolbar>
 
+<div class="container mt-3">
+  <mat-tab-group animationDuration="0ms" dynamicHeight>
+    <mat-tab label="Ranking de Mapas">
+      <!--<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef> Weight </th>
+          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef> Symbol </th>
+          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>-->
+    </mat-tab>
+    <mat-tab label="Ranking de Banderas">
+
+    </mat-tab>
+    <mat-tab label="Ranking de Quiz">
+
+    </mat-tab>
+  </mat-tab-group>
+</div>
 
 <mat-spinner *ngIf="loading" diameter="50" class="spinner"></mat-spinner>
