ranking funcional y arreglos varios

--- a/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
@@ -2,7 +2,7 @@
   <img class="border" [src]="pregunta" style="width: 200px"/>
   <form [formGroup]="form" (ngSubmit)="comprobar()" class="mt-3">
     <mat-form-field class="ancho" appearance="fill">
-      <input type="text" matInput autocomplete="off" formControlName="pais_formulario">
+      <input type="text" matInput autocomplete="off" formControlName="pais_formulario" autofocus>
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary" class="ancho boton" style="display: none;">Comprobar</button>
   </form>
