--- a/front/src/app/components/dashboard/ranking/ranking.component.html
+++ b/front/src/app/components/dashboard/ranking/ranking.component.html
@@ -5,41 +5,94 @@
 <div class="container mt-3">
   <mat-tab-group animationDuration="0ms" dynamicHeight>
     <mat-tab label="Ranking de Mapas">
-      <!--<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container>
-
+      <table mat-table [dataSource]="dataSourceMapas" class="mat-elevation-z8">
 
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <th mat-header-cell *matHeaderCellDef> Usuario </th>
           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
 
-        <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef> Weight </th>
-          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        <ng-container matColumnDef="nombre_juego">
+          <th mat-header-cell *matHeaderCellDef> Modo </th>
+          <td mat-cell *matCellDef="let element"> {{element.nombre_juego}} </td>
         </ng-container>
 
 
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Symbol </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        <ng-container matColumnDef="puntuacion">
+          <th mat-header-cell *matHeaderCellDef> Puntuación </th>
+          <td mat-cell *matCellDef="let element"> {{element.puntuacion}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="tiempo">
+          <th mat-header-cell *matHeaderCellDef> Tiempo </th>
+          <td mat-cell *matCellDef="let element"> {{element.tiempo}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>-->
+      </table>
     </mat-tab>
     <mat-tab label="Ranking de Banderas">
+      <table mat-table [dataSource]="dataSourceBanderas" class="mat-elevation-z8">
 
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Usuario </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="nombre_juego">
+          <th mat-header-cell *matHeaderCellDef> Modo </th>
+          <td mat-cell *matCellDef="let element"> {{element.nombre_juego}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="puntuacion">
+          <th mat-header-cell *matHeaderCellDef> Puntuación </th>
+          <td mat-cell *matCellDef="let element"> {{element.puntuacion}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="tiempo">
+          <th mat-header-cell *matHeaderCellDef> Tiempo </th>
+          <td mat-cell *matCellDef="let element"> {{element.tiempo}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </mat-tab>
     <mat-tab label="Ranking de Quiz">
+      <table mat-table [dataSource]="dataSourceQuiz" class="mat-elevation-z8">
 
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Usuario </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="nombre_juego">
+          <th mat-header-cell *matHeaderCellDef> Modo </th>
+          <td mat-cell *matCellDef="let element"> {{element.nombre_juego}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="puntuacion">
+          <th mat-header-cell *matHeaderCellDef> Puntuación </th>
+          <td mat-cell *matCellDef="let element"> {{element.puntuacion}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="tiempo">
+          <th mat-header-cell *matHeaderCellDef> Tiempo </th>
+          <td mat-cell *matCellDef="let element"> {{element.tiempo}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </mat-tab>
   </mat-tab-group>
 </div>
