--- a/front/src/app/components/dashboard/juegos/juegos-mapas/juego-mapa-europa/juego-mapa-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-mapas/juego-mapa-europa/juego-mapa-europa.component.html
@@ -1,9 +1,14 @@
-<div class="container col-auto text-center mt-5" *ngIf="!fin">
-  <h1 class="border-bottom border-top" [innerHTML]="pais"></h1>
+<div class="container col-auto text-center mt-5">
+  <div id="secondTenthsExample">
+    <div class="values"></div>
+  </div>
+  <div *ngIf="!fin">
+    <h1 class="border-bottom border-top" [innerHTML]="pais"></h1>
 
-  <div id="chartdiv" style="width: 100%; height: 700px; margin-top: 50px;"></div>
+    <div id="chartdiv" style="width: 100%; height: 700px; margin-top: 50px;"></div>
+  </div>
 
-  <button type="button" mat-raised-button color="warn" onclick="history.back()">
+  <button type="button" mat-raised-button color="warn" (click)="salir()">
     <mat-icon>close</mat-icon>
     <span>Abandonar</span>
   </button>
