--- a/front/src/app/components/dashboard/ranking/ranking.component.html
+++ b/front/src/app/components/dashboard/ranking/ranking.component.html
@@ -110,7 +110,7 @@
       </table>
     </mat-tab>
   </mat-tab-group>
-  <mat-paginator [pageSizeOptions]="[3, 5, 10, 20]" aria-label="Select page of users"></mat-paginator>
+  <mat-paginator></mat-paginator>
 </div>
 
 <mat-spinner *ngIf="loading" diameter="50" class="spinner mt-4"></mat-spinner>
