--- a/front/src/app/components/dashboard/administrar/administrar.component.html
+++ b/front/src/app/components/dashboard/administrar/administrar.component.html
@@ -26,7 +26,7 @@
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <a matTooltip="Eliminar Usuario" style="color: #E15639;" (click)="eliminarUsuario(element.id)">
+        <a matTooltip="Eliminar Usuario" style="color: #E15639;" (click)="eliminarUsuario(element.id, element.name)">
           <mat-icon>delete</mat-icon>
         </a>
       </td>
