--- a/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
@@ -2,11 +2,12 @@
   <div id="secondTenthsExample">
     <div class="values"></div>
   </div>
+  <h2 [innerHTML]="'Puntuación: '+puntuacion"></h2>
   <div *ngIf="!fin">
     <img class="border mt-4" [src]="pregunta" style="width: 200px"/>
     <form [formGroup]="form" (ngSubmit)="comprobar()" class="mt-3">
       <mat-form-field class="ancho" appearance="fill">
-        <input type="text" matInput autocomplete="off" formControlName="pais_formulario" autofocus>
+        <input type="text" matInput autocomplete="off" formControlName="pais_formulario" autofocus id="input">
       </mat-form-field>
       <button type="submit" mat-raised-button color="primary" class="ancho boton" style="display: none;">Comprobar</button>
     </form>
@@ -16,9 +17,4 @@
     <mat-icon>close</mat-icon>
     <span>Abandonar</span>
   </button>
-</div>
-
-<div class="container" *ngIf="fin">
-  <h1>Puntuación</h1>
-  <h2 [innerHTML]="puntuacion"></h2>
 </div>
