--- a/front/src/app/components/dashboard/dashboard.component.html
+++ b/front/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" *ngIf="!loading" style="height: 80px;">
   <div class="container col-auto text-center">
-    <img src="./assets/img/logo.png" alt="" width="150px">
+    <button mat-button routerLink="inicio"><img src="./assets/img/logo.png" alt="" width="150px"></button>
   </div>
   <button class="position-absolute end-0 mx-3" mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
