--- a/front/src/app/components/dashboard/info/info.component.html
+++ b/front/src/app/components/dashboard/info/info.component.html
@@ -2,3 +2,41 @@
   <span>Info</span>
 </mat-toolbar>
 
+<div class="row mt-4 mb-5">
+  <div class="col">
+    <h1>¿Qué es FunnyFlags?</h1>
+    <p>FunnyFlags es una aplicación web didáctica destinada al aprendizaje de cualquier persona</p>
+    <p>La app ayuda a aprender geografía forma interactiva, sencilla y divertida</p>
+    <p>Gracias a FunnyFlags puedes ser capaz de aprender cientos de paises, capitales, banderas, monedas, idiomas, etc, de todo el mundo</p>
+    <p>¿Y si no puedes saberlo todo? Simplemente tira ff :)</p>
+  </div>
+  <div class="col">
+    <h1>¿Cómo se juega?</h1>
+    <p>En FunnyFlags existen 4 modos de juego</p>
+    <ul>
+      <li>En tutoriales, podrás aprender toda la información necesaria para jugar los demás modos de juego</li>
+      <li>En mapas, tendrás que hacertar el país hasta completar el mapa</li>
+      <li>En banderas, tendrás que adivinar de que país es la bandera</li>
+      <li>En preguntas, tendrás que responder correctamente a preguntas aleatorias</li>
+    </ul>
+  </div>
+</div>
+
+<div class="row mt-4 mb-5">
+  <div class="col">
+    <h1>¿Cómo funciona el ranking?</h1>
+    <p>El ranking está dividido en los 3 modos de juego que existen en FunnyFlags actualmente</p>
+    <p>En cada uno se puede apreciar puntuaciones y tiempos que hace cada usuario al terminar una partida</p>
+    <p>Además, el ranking contiene filtros que ayudan a encontrar al jugador o el modo de juego que desees observar</p>
+  </div>
+  <div class="col">
+    <h1>Datos de la cuenta</h1>
+    <p>Toda la información que proporciona el usuario es almacenada en la base de datos</p>
+    <p>El usuario puede cambiar el nombre y la contraseña de la cuenta en cualquier momento, siempre que estos cumplan los requisitos</p>
+    <p>Tu cuenta podría ser eliminada por un administrador, si esto ocurre, se podrá contactar al siguiente correo
+      y un administrador alegará las razones por las cuales la cuenta ha sido eliminada</p>
+    <a href="">soporteff@funnyflags.com</a>
+  </div>
+</div>
+
+
