--- a/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
@@ -1,8 +1,18 @@
 <div class="container col-auto text-center mt-5">
-  <div id="secondTenthsExample">
-    <div class="values"></div>
+  <div *ngIf="start">
+    <div id="secondTenthsExample">
+      <div class="values"></div>
+    </div>
+    <h2 [innerHTML]="'Puntuación: '+puntuacion"></h2>
   </div>
-  <h2 [innerHTML]="'Puntuación: '+puntuacion"></h2>
+  <div *ngIf="!start" class="mb-4">
+    <h1>Juego Banderas Europa</h1>
+    <p>Acierta las 10 bandera o llega a 0 puntos para terminar</p>
+    <button type="button" mat-raised-button color="primary" (click)="empezar()">
+      <mat-icon>close</mat-icon>
+      <span>Empezar</span>
+    </button>
+  </div>
   <div *ngIf="!fin">
     <img class="border mt-4" [src]="pregunta" style="width: 200px"/>
     <form [formGroup]="form" (ngSubmit)="comprobar()" class="mt-3">
@@ -11,6 +21,11 @@
       </mat-form-field>
       <button type="submit" mat-raised-button color="primary" class="ancho boton" style="display: none;">Comprobar</button>
     </form>
+  </div>
+
+  <div *ngIf="fin">
+    <h1>THE END</h1>
+    <p>Mire su nueva puntuación en el Ranking</p>
   </div>
 
   <button type="button" mat-raised-button color="warn" (click)="salir()">
