--- a/front/src/app/components/dashboard/settings/settings.component.html
+++ b/front/src/app/components/dashboard/settings/settings.component.html
@@ -3,7 +3,17 @@
 </mat-toolbar>
 
 
-<mat-spinner *ngIf="loading" diameter="50" class="spinner"></mat-spinner>
+<mat-spinner *ngIf="loading" diameter="50" class="spinner mt-5"></mat-spinner>
 
-<div [innerHTML]="target"></div>
 
+
+<div class="row mt-4" *ngIf="!loading">
+  <div class="col">
+    <h2>Configuración del usuario</h2>
+    <div [innerHTML]="target"></div>
+  </div>
+  <div class="col">
+    <h2>Configuración de la app</h2>
+    <div>Próximamente...</div>
+  </div>
+</div>
