--- a/front/src/app/components/dashboard/juegos/juegos-mapas/juego-mapa-europa/juego-mapa-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-mapas/juego-mapa-europa/juego-mapa-europa.component.html
@@ -9,7 +9,7 @@
     <h1>Juego Mapa Europa</h1>
     <p>Acierta todos los paises o llega a 0 puntos para terminar</p>
     <button type="button" mat-raised-button color="primary" (click)="empezar()">
-      <mat-icon>close</mat-icon>
+      <mat-icon>done</mat-icon>
       <span>Empezar</span>
     </button>
   </div>
