--- a/front/src/app/components/dashboard/juegos/juegos-quiz/juego-quiz-europa/juego-quiz-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-quiz/juego-quiz-europa/juego-quiz-europa.component.html
@@ -8,10 +8,10 @@
   </div>
 
   <div *ngIf="!start" class="mb-4">
-    <h1>Juego Banderas Europa</h1>
+    <h1>Juego Quiz Europa</h1>
     <p>Acierta las 5 pregunta o llega a 0 puntos para terminar</p>
     <button type="button" mat-raised-button color="primary" (click)="empezar()">
-      <mat-icon>close</mat-icon>
+      <mat-icon>done</mat-icon>
       <span>Empezar</span>
     </button>
   </div>
