--- a/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
+++ b/front/src/app/components/dashboard/juegos/juegos-banderas/juego-banderas-europa/juego-banderas-europa.component.html
@@ -4,23 +4,24 @@
       <div class="values"></div>
     </div>
     <h2 [innerHTML]="'Puntuación: '+puntuacion"></h2>
+    <div *ngIf="!fin">
+      <img class="border mt-4" [src]="pregunta" style="width: 200px"/>
+      <form [formGroup]="form" (ngSubmit)="comprobar()" class="mt-3">
+        <mat-form-field class="ancho" appearance="fill">
+          <input type="text" matInput autocomplete="off" formControlName="pais_formulario" autofocus id="input">
+        </mat-form-field>
+        <button type="submit" mat-raised-button color="primary" class="ancho boton" style="display: none;">Comprobar</button>
+      </form>
+    </div>
   </div>
+
   <div *ngIf="!start" class="mb-4">
     <h1>Juego Banderas Europa</h1>
     <p>Acierta las 10 bandera o llega a 0 puntos para terminar</p>
     <button type="button" mat-raised-button color="primary" (click)="empezar()">
-      <mat-icon>close</mat-icon>
+      <mat-icon>done</mat-icon>
       <span>Empezar</span>
     </button>
-  </div>
-  <div *ngIf="!fin">
-    <img class="border mt-4" [src]="pregunta" style="width: 200px"/>
-    <form [formGroup]="form" (ngSubmit)="comprobar()" class="mt-3">
-      <mat-form-field class="ancho" appearance="fill">
-        <input type="text" matInput autocomplete="off" formControlName="pais_formulario" autofocus id="input">
-      </mat-form-field>
-      <button type="submit" mat-raised-button color="primary" class="ancho boton" style="display: none;">Comprobar</button>
-    </form>
   </div>
 
   <div *ngIf="fin">
